feat: 完善游戏流程和接口
